--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@monaco-editor/react",
-  "version": "1.2.1",
+  "version": "2.3.5",
   "description": "Monaco editor wrapper for easy/one-line integration with React applications (e.g. powered by create-react-app) without need of webpack configuration files",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -31,31 +31,33 @@
   },
   "homepage": "https://github.com/SurenAt93/monaco-react#readme",
   "peerDependencies": {
+    "monaco-editor": "^0.18.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
-    "@testing-library/react": "^8.0.1",
-    "babel-eslint": "9.x",
-    "babel-jest": "^24.8.0",
-    "eslint": "5.x",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-plugin-flowtype": "2.x",
-    "eslint-plugin-import": "2.x",
-    "eslint-plugin-jsx-a11y": "6.x",
-    "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "1.5.0",
-    "husky": "^2.4.1",
-    "jest": "^24.8.0",
-    "jest-dom": "^3.5.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "@testing-library/jest-dom": "^4.1.0",
+    "@testing-library/react": "^9.2.0",
+    "babel-eslint": "10.0.3",
+    "babel-jest": "^24.9.0",
+    "eslint": "6.5.1",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-plugin-flowtype": "4.3.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.15.1",
+    "eslint-plugin-react-hooks": "2.1.1",
+    "husky": "^3.0.8",
+    "jest": "^24.9.0",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1"
   },
   "babel": {
     "presets": [
@@ -68,7 +70,8 @@
         {
           "loose": false
         }
-      ]
+      ],
+      "@babel/plugin-transform-runtime"
     ]
   },
   "husky": {
